<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Explore</string>

    <!-- Pin Fragment  _________________________________________________-->
    <string name="pinInfo">Pin Info</string>
    <string name="title">Title</string>
    <string name="title1">Enter a Title for Your Pin.</string>
    <string name="desc">Description</string>
    <string name="desc1">Enter a Description for Your Pin. </string>
    <string name="lat">Latitude</string>
    <string name="latExample">43.8231° N</string>
    <string name="longit">Longitude</string>
    <string name="longitExample">111.7924° W</string>111.7924°
    <string name="date">Date</string>
    <string name="dateExample">11/30/2018</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="pin">Select A Pin</string>
    // pin strings for images
    <string name="antelope">Antelope</string>
    <string name="bathroom">Bathroom</string>
    <string name="bear">Bear</string>
    <string name="berry">Berry</string>
    <string name="bodyofwater">Body of Water</string>
    <string name="camping1">Camping</string>
    <string name="christmastree">Christmas Tree</string>
    <string name="deer">Deer</string>
    <string name="elk">Elk</string>
    <string name="firewood">Firewood</string>
    <string name="fish">Fish</string>
    <string name="hiking">Hiking</string>
    <string name="horse">Horse</string>
    <string name="lookout">Lookout</string>
    <string name="moose">Moose</string>
    <string name="mountainbike">Mountain Bike</string>
    <string name="person">Person</string>
    <string name="rockclimb">Rock Climb</string>
    <string name="sleddinghill">Sledding Hill</string>
    <string name="waterfall2">Waterfall</string>
    <string name="wildfire">Wild Fire</string>
    <string name="wolf">Wolf</string>


    <!-- Filter Fragment ________________________________________-->
    <string name="dialog_title">Select Locations</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="set_all_label"> Select all</string>
    <!-- ____________________________________________ -->

    <string name="locationError">Location Error</string>
    <string name="locationErrMsg">In order to save location, you must enable location services on your device and grant location permissions to this app.</string>
    <string name="unknownErrMsg">Unknown location services error. You will not be able to save location until the error is fixed.</string>

    <string name="saveLocation">Save Find</string>
    <string name="camping"></string>
    <string name="service"></string>
    <string name="time"></string>
    <string name="touch"></string>
    <string name="words"></string>

    <string name="category">category</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="thanks">Thank you for saving a discovery.</string>
    <string name="toMap">Return to Map</string>
    <string name="delete_all">Delete All Pins</string>

    <string name="howTo">How to Use</string>
    <string name="instruction1">Tap the plus icon to save a discovery near you. Or simply explore details about the discoveries of others by zooming in on the map.</string>
    <string name="instruction2">Tap the icon that best reflects the kindness you would like to report.</string>
    <string name="instruction3">Return to the map to see your new act of kindness added at your location.</string>

    <string name="privacy">Privacy</string>
    <string name="sharingLocation">Determining and Sharing Location</string>
    <string name="privacyTest">This app collects your approximate GPS location while the app is active.
		This app does not collect any other data about you or your device.
		For example, this app does not collect your name, birth date, gender, phone number, contacts, photos, or device type.
		The GPS data is used solely for services rendered by this app and its corresponding website and is not sold or transferred to any other entity.</string>

    <string name="about">About</string>
    <string name="appDescr">An app that allows you to save your discoveries while you explore the world. This app is designed, written, and maintained by students at Brigham Young University - Idaho.</string>
    <string name="eula">To the fullest extent allowed by law, this software comes with no warranty, either express or implied. By installing and/or using this software you agree to hold harmless Brigham Young University - Idaho and its sponsors, employees, and students.</string>
    <string name="feedback">Thank you for using Explore! We appreciate your comments, questions, and recommendations to help us improve this app. You can contact us through the <a>Google Play Store</a>.</string>
    <string name="founders">Founders</string>
    <string name="contribs">Contributors</string>
    <string name="winter2018">Fall 2018</string>
    <string name="logoCredit">Created my free logo at <a href="https://logomakr.com">LogoMakr.com</a></string>
    //to give proper credit must be this way in text.(logoCredit)//
    <string name="icons8">Free drawer icons at <a href="https://icons8.com/icon/new-icons/all">Icons8.com</a></string>
    <string name="drawerHeaderImage">Drawer Header Image created by Yannik Wenk, <a href="http://yannikwenk.com">Yannikwenk.com</a></string>


    https://icons8.com/icon/new-icons/all

    <string name="mistake">Well, this is embarrassing. Something is wrong with this page, and it isn\'t working. We apologize.</string>

    <string-array name="timePeriod">
        <item>All Time</item>
        <item>Last Year</item>
        <item>Last Month</item>
        <item>Last Week</item>
        <item>Last 24 Hours</item>
        <item>Last Hour</item>
    </string-array>

    <string-array name="category">
        <item>Bathroom</item>

        <item>Mountainbike</item>
        <item>Rock Climbing</item>
        <item>Sledding Hill</item>
        <item>Camping Spot</item>
        <item>Fishing Spot</item>
        <item>Hiking Trail</item>
        <item>Horseback Trail</item>

        <item>Berries</item>
        <item>Christmas Tree</item>
        <item>Firewood</item>

        <item>Wildfire</item>
        <item>Body Of Water</item>
        <item>WaterFall</item>
        <item>Lookout</item>

        <item>Antelope</item>
        <item>Deer</item>
        <item>Elk</item>
        <item>Moose</item>
        <item>Bear</item>
        <item>Wolf</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>

    <!-- ACTIVITY MAP -->
    <string name="hints">Enter Address, City or Zip Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>

