<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desc" />
            </android.support.design.widget.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewCount">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/antelope"
                    android:src="@drawable/icon_antelope" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bathroom"
                    android:src="@drawable/icon_bathroom" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bear"
                    android:src="@drawable/icon_bear" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/berry"
                    android:src="@drawable/icon_berry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bodyofwater"
                    android:src="@drawable/icon_bodyofwater" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/camping1"
                    android:src="@drawable/icon_camping" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/christmastree"
                    android:src="@drawable/icon_christmastree" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/deer"
                    android:src="@drawable/icon_deer" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/elk"
                    android:src="@drawable/icon_elk" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/firewood"
                    android:src="@drawable/icon_firewood" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fish"
                    android:src="@drawable/icon_fish" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hiking"
                    android:src="@drawable/icon_hiking" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/lookout"
                    android:src="@drawable/icon_lookout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/moose"
                    android:src="@drawable/icon_moose" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/mountainbike"
                    android:src="@drawable/icon_mountainbike" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/person"
                    android:src="@drawable/icon_person" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/rockclimb"
                    android:src="@drawable/icon_rockclimb" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sleddinghill"
                    android:src="@drawable/icon_sleddinghill" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/waterfall2"
                    android:src="@drawable/icon_waterfall2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/wildfire"
                    android:src="@drawable/icon_wildfire" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/wildfire"
                    android:src="@drawable/icon_wildfire" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/wolf"
                    android:src="@drawable/icon_wolf" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/lat" />

            <TextView
                android:id="@+id/longit"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/longit" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:autofillHints="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="193dp"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>