<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/AboutFragment"

	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginEnd="0dp"
	android:layout_marginStart="0dp">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/txtVersion"
			style="@style/Heading2" />


		<ImageView
			android:id="@+id/thumbnail_view"
			android:layout_width="402dp"
			android:layout_height="121dp"
			android:contentDescription="@string/todo"
			android:src="@mipmap/logo" />


		<TextView
			android:id="@+id/About"
			style="@style/TitleAbout"
			android:layout_width="match_parent"
			android:layout_height="35dp"
			android:layout_marginTop="0dp"
			android:layout_marginBottom="10dp"
			android:src="@mipmap/logo"
			android:text="@string/about" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/eula" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">

			<TextView
				android:id="@+id/lblFounders"
				style="@style/Heading2"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:text="@string/founders" />


			<TextView
				android:id="@+id/lblWinter2018A"
				style="@style/Contributors"
				android:layout_alignParentBottom="true"
				android:layout_marginStart="10dp"
				android:layout_marginBottom="0dp"
				android:layout_toEndOf="@+id/lblFounders"
				android:text="@string/contribsFall2018" />
		</RelativeLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:text="@string/appDescr" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:text="@string/icons8" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/logoCredit"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/drawerHeaderImage"
			/>
	</LinearLayout>
</ScrollView>
